--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@ body {
     @apply font-semibold text-zinc-100 bg-mydark focus:outline-1 focus:outline-[#222c35] hover:shadow-[0_0_0_1px_#292929];
   }
   .auth-input {
-    @apply bg-gray-700 text-zinc-50 focus-visible:ring-zinc-800 transition ease-in-out duration-200 placeholder:text-zinc-500 h-10 rounded-md px-3 text-base sm:text-sm data-[state="read-only"]:cursor-default data-[state="read-only"]:border-zinc-500 data-[state="read-only"]:bg-zinc-800 data-[state="read-only"]:text-zinc-900 relative w-full pl-1.5 pr-1.5 outline-none focus-visible:ring-2;
+    @apply bg-zinc-100 dark:bg-gray-700 text-zinc-950 dark:text-zinc-50 focus-visible:ring-zinc-800 transition ease-in-out duration-200 placeholder:text-zinc-500 h-10 rounded-md px-3 text-base sm:text-sm data-[state="read-only"]:cursor-default data-[state="read-only"]:border-zinc-500 data-[state="read-only"]:bg-zinc-800 data-[state="read-only"]:text-zinc-900 relative w-full pl-1.5 pr-1.5 outline-none focus-visible:ring-2;
   }
   .auth-button {
     @apply mt-1.5 relative inline-flex items-center justify-center w-full h-10 gap-1 pl-4 pr-4 text-sm font-semibold  transition duration-200 ease-in-out border rounded-md cursor-pointer select-none disabled:cursor-not-allowed disabled:opacity-70 bg-mydark text-white border-mydark hover:border-myhover btn-primary;
