--- a/app/_components/Home.scss
+++ b/app/_components/Home.scss
@@ -112,7 +112,10 @@ body {
 }
 
 .statsSection {
-  @media (max-width: 660px) and (max-height: 400px) {
+  @media (max-width: 530px) and (max-height: 670px) {
+    display: none;
+  }
+  @media (max-height: 500px) {
     display: none;
   }
 
