--- a/app/account/heatmap.css
+++ b/app/account/heatmap.css
@@ -20,6 +20,9 @@
 }
 
 .react-calendar-heatmap-month-label {
+  color: white !important;
+  fill: rgb(219, 219, 219) !important;
+  font-family: inherit !important;
 }
 
 /*
