--- a/app/_components/Home.scss
+++ b/app/_components/Home.scss
@@ -227,3 +227,71 @@ p.youCanPressSpaceOrEnter {
   transform: translate(0, -16px);
   text-align: center;
 }
+
+.c1 {
+  background: radial-gradient(circle, hsl(0, 0%, 4%) 0%, hsl(0, 0%, 3%) 100%);
+  height: 100dvh;
+  width: 100dvh;
+  border-radius: 100%;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -4;
+}
+
+.c2 {
+  background: radial-gradient(circle, hsl(0, 0%, 3%) 0%, hsl(0, 0%, 2%) 100%);
+  height: 70dvh;
+  width: 70dvh;
+  border-radius: 100%;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -3;
+}
+
+.c3 {
+  background: radial-gradient(circle, hsl(0, 0%, 2%) 0%, hsl(0, 0%, 1%) 100%);
+  height: 50dvh;
+  width: 50dvh;
+  border-radius: 100%;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -2;
+}
+
+.c4 {
+  background: radial-gradient(circle, hsl(0, 0%, 1%) 0%, hsl(0, 0%, 0%) 100%);
+  height: 35dvh;
+  width: 35dvh;
+  border-radius: 100%;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.circle {
+  // background: radial-gradient(circle, hsl(0, 0%, 0%) 0%, hsl(0, 0%, 5%) 100%);
+  height: 100dvh;
+  width: 100dvh;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
