--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,8 @@
 :root {
   /* background-color: #18231c; */
   /* background-color: #17201b; */
-  background-color: #0a0a0a;
+  /* background-color: hsl(0, 0%, 5%); */
+  background: radial-gradient(circle, hsl(0, 0%, 0%) 0%, hsl(0, 0%, 7%) 100%);
   color: white;
 }
 
